force-app/main/default/objects/CampaignMetric__c/CampaignMetric__c.object-meta.xml
<CustomObject>
    <label>Campaign Metric</label>
    <pluralLabel>Campaign Metrics</pluralLabel>
    <nameField>
        <label>Campaign Metric Number</label>
        <type>AutoNumber</type>
        <displayFormat>CA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>