force-app/main/default/objects/CampaignMetric__c/fields/CampaignRequest__c.field-meta.xml
<CustomField>
    <fullName>CampaignRequest__c</fullName>
    <label>Campaign Request</label>
    <type>MasterDetail</type>
    <referenceTo>CampaignRequest__c</referenceTo>
    <relationshipName>CampaignRequests</relationshipName>
</CustomField>