force-app/main/default/objects/CampaignMetric__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>