force-app/main/default/objects/CampaignMetric__c/fields/Impressions__c.field-meta.xml
<CustomField>
    <fullName>Impressions__c</fullName>
    <label>Impressions</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>